# douban-movie

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 16bcbbc484a4_recreate_user_table.py  1be561a42982_movie_delete.py  20260417_0001_initial_movie.py  41af4b521965_initial.py  71d61790d991_auto_startup_sync.py  ace8b55db2fc_add_user_table.py  ec54099c484e_auto_startup_sync.py  f183f292ad9d_create_test.py
app/: __init__.py  init_data.py  main.py  migration.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  utils.py
app/api/v1/auth/: __init__.py  router.py
app/api/v1/route/: __init__.py  movie_route.py
app/config/: settings.py
app/controllers/: __init__.py  auth_controller.py  log.py  movie_controller.py  user_controller.py
app/core/: __init__.py  bgtask.py  crud.py  ctx.py  dependency.py  exception.py  init_app.py  middlewares.py  movie_controller.py  movie_crud.py  user_crud.py
app/database/: __init__.py  base_class.py  migration.py  session.py
app/log/: __init__.py  log.py
app/models/: __init__.py  movies.py  test.py  user.py
app/models/system/: __init__.py  base_class.py  migration.py  session.py
app/schemas/: __init__.py  auth.py  common.py  login.py  movie.py  user.py
app/services/: __init__.py  auth_service.py  movie_service.py  token_blacklist.py
app/settings/: __init__.py  config.py
app/transports/: __init__.py
app/transports/grpc/: __init__.py  server.py
app/transports/http/: grpc_gateway.py
app/utils/: security.py
(+5 files in other folders)
