[project]
name = "pythonproject4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.110.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "lxml>=5.0.0",
    "passlib>=1.7.4",
    "protobuf>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose>=3.3.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]
